# kravex

./: .gitignore  AGENTS.md  Cargo.toml  HUMANS.md  README.md  docker-compose.yml  memory.md
.claude/commands/: kvx.md
.github/workflows/: rust.yml
.obsidian/: workspace.json
benchmark/: .gitignore  README.md  improvements.md
benchmark/configs/aws/: geonames_pid_aws.toml  geonames_static_aws.toml  noaa_pid_aws.toml  noaa_static_aws.toml  pmc_pid_aws.toml  pmc_static_aws.toml
benchmark/configs/local/: geonames_es_to_os_static.toml  geonames_ethos.toml  geonames_opensearch_pid.toml  geonames_opensearch_static.toml  geonames_pid.toml  geonames_static.toml  noaa_opensearch_pid.toml  noaa_opensearch_static.toml  noaa_pid.toml  noaa_static.toml  pmc_opensearch_pid.toml  pmc_opensearch_static.toml  pmc_pid.toml  pmc_static.toml
benchmark/esrally_tracks/geonames/: documents.json  documents.json.offset  index.json  track.json
benchmark/esrally_tracks/noaa/: documents.json  track.json
benchmark/esrally_tracks/pmc/: documents.json  track.json
benchmark/notebook/: kravex_benchmarks.ipynb
benchmark/scripts/: README.md  __init__.py  kvx_utils.py  migration_loop.py  python_migrate.py  run_benchmarks.py  setup.py  setup.sh
configs/: kvx.toml  kvx_file.toml  kvx_file_to_esdb.toml
crates/kvx/: Cargo.toml  README.md
crates/kvx-cli/: Cargo.toml  README.md
crates/kvx-cli/src/: main.rs
crates/kvx/benches/: file_source_bench.rs  joiner_bench.rs
crates/kvx/src/: README.md  app_config.rs  backends.rs  buffer_pool.rs  cache_aligned.rs  casts.rs  composers.rs  config.rs  controllers.rs  foreman.rs  lib.rs  progress.rs  regulators.rs  supervisors.rs  throttlers.rs  transformers.rs  transforms.rs  workers.rs
crates/kvx/src/app_config/: sink_config.rs  source_config.rs
crates/kvx/src/backends/: README.md  config.rs  elasticsearch.rs  file.rs  in_mem.rs  mod.rs  opensearch.rs  sink.rs  source.rs
crates/kvx/src/backends/elasticsearch/: README.md  config.rs  elasticsearch_sink.rs  elasticsearch_source.rs  mod.rs
crates/kvx/src/backends/file/: README.md  config.rs  file_sink.rs  file_source.rs  mod.rs
crates/kvx/src/backends/in_mem/: README.md  in_mem_sink.rs  in_mem_source.rs
crates/kvx/src/backends/opensearch/: mod.rs  opensearch_sink.rs  opensearch_source.rs
crates/kvx/src/backends/s3_rally/: mod.rs  s3_rally_source.rs
crates/kvx/src/casts/: README.md  mod.rs  ndjson_to_bulk.rs  passthrough.rs  pit_to_bulk.rs  scroll_to_bulk.rs
crates/kvx/src/collectors/: json_array.rs  mod.rs  ndjson.rs
crates/kvx/src/composers/: backend.rs  json_array.rs  ndjson.rs
crates/kvx/src/controllers/: config_controller.rs  pid_bytes_to_doc_count.rs
crates/kvx/src/manifolds/: README.md  backend.rs  json_array.rs  mod.rs
crates/kvx/src/regulators/: README.md  config.rs  cpu_pressure.rs  mod.rs  pressure_gauge.rs  static_regulator.rs
crates/kvx/src/supervisors/workers/: source_worker.rs
crates/kvx/src/throttlers/: config_controller.rs  pid_bytes_to_doc_count.rs  pid_bytes_to_ms.rs  static_throttle.rs
crates/kvx/src/transformers/: passthrough.rs  rally_s3_to_es.rs
crates/kvx/src/transforms/: es_hit_to_bulk.rs  ndjson_to_bulk.rs  passthrough.rs  rally_s3_to_es.rs
crates/kvx/src/workers/: README.md  config.rs  drainer.rs  flow_master.rs  joiner.rs  mod.rs  pumper.rs  sink_worker.rs  source_worker.rs  transform_worker.rs
demo/: README.md  requirements.txt
demo/configs/: employees.toml  job_postings.toml  learning_records.toml  performance_reviews.toml  search_analytics.toml
demo/mappings/: employees.json  job_postings.json  learning_records.json  performance_reviews.json  search_analytics.json
demo/scripts/: analyze.py  migrate.py  run_demo.py  seed.py  validate.py
shared/: README.md  __init__.py  kvx_utils.py
