# ╔══════════════════════════════════════════════════════════════════╗
# ║  🚀 KRAVEX WORKSPACE - In a world where search indices must    ║
# ║  migrate... one workspace dared to cargo build.                ║
# ║  Viewer discretion advised. Contains strong Rust content. 🦀   ║
# ╚══════════════════════════════════════════════════════════════════╝

[workspace]
resolver = "3"
members = ["crates/kvx-cli", "crates/kvx"]

[workspace.dependencies]

# 😬 because panic is not a personality trait. well, actually...
anyhow = "1"

# ✉️ like passing notes in class but the teacher is the runtime
async-channel = "2"

# 📋 a figment of our configuration
figment = { version = "0.10", features = ["env", "toml"]}

# 📡 re-quest? more like re-pray the API is up
reqwest = "0.13"

# 📦 derive deez nuts (sorry, the conventions made me do it)
serde = { version = "1.0", features = ["derive"] }

# 🦆 serde's plus one at the party
serde_json = "1.0"

# 🧵👑 the async overlord. kneel before thy runtime, peasant threads.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"]}

# 🍞 like breadcrumbs but for electrons
tracing = "0.1"

# 🔔 tracing's biggest fan. literally subscribes. smash that bell icon.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 🎭 pretending to be async, but deep down we all block sometimes
async-trait = "0.1"

# 🔮 we look into our crystal ball and await the...
futures = "0.3"

# 📊 because "how fast are we going?" deserves a better answer than "uh... fast?"
indicatif = "0.17"

# 🍽️ a table so comfy it should come with a throw pillow and a cat
comfy-table = "7"

# 🪣 aws-sdk-s3 — because downloading from S3 by hand is like fetching water from a well
# when there's a perfectly good pipe RIGHT THERE
aws-sdk-s3 = "1"

# 🔧 aws-config — the magic incantation that finds your credentials
# in env vars, IAM roles, ~/.aws/config, or possibly your dreams
aws-config = { version = "1", features = ["behavior-version-latest"] }

# 👏 clap — because parsing CLI args by hand is a form of self-harm
# that even the borrow checker wouldn't approve of
clap = { version = "4", features = ["derive"] }
