[package]
name = "kvx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
figment = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
