[package]
name = "kvx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
memchr = { workspace = true }
async-channel = { workspace = true }
figment = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "file_source_bench"
harness = false
